# LoreKeeper

./: .gitignore  README.md  config.example.toml  main.py  pyproject.toml  reranker.py
lorekeeper/: benchmark.py  cal_f1.py  config.py  customed_statistic.py  embeddings.py  indexer.py  query_engine.py  reranker.py  slm.py  utils.py
lorekeeper/semantic_cache/: cache.py
scripts/: build_vec_index.py  run_benchmark.py
tests/: qwen-embedding.py
