[project]
name = "LoreKeeper"
version = "0.1.0"
description = "LoreKeeper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.1",
    "transformers==4.57.1",
    "numpy>=1.26",
    "sentence-transformers>=2.7.0",
    "accelerate>=0.34",
    "llama-index",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-llms-huggingface>=0.6.1",
    "tqdm>=4.66",
    "flagembedding>=1.3.5",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
